# gisweep

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: active.md  checks.md  compliance.md  cve.md  index.md  install.md  outputs.md  quickstart.md
docs/demo/: README.md  demo.tape  demo_player.sh
docs/subcommands/: arcgis.md  cleanup.md  ogc.md  scan.md  secrets.md  web.md
scripts/: refresh_cve_db.py
src/gisweep/: __init__.py  _version.py  cli.py
src/gisweep/audit/: __init__.py  log.py
src/gisweep/auth/: __init__.py  arcgis_token.py
src/gisweep/checks/: __init__.py
src/gisweep/checks/arcgis/: __init__.py  _helpers.py  access.py  credentials.py  cves.py  data.py  data_exfil.py  enumeration.py  permissions.py  portal.py  ssrf.py
src/gisweep/checks/ogc/: __init__.py  _helpers.py  active.py  capabilities.py  cves.py  data.py  permissions.py
src/gisweep/checks/web/: __init__.py  _helpers.py  cves.py  discovery.py  posture.py  secrets.py
src/gisweep/compliance/: __init__.py  geo.py  overlay.py
src/gisweep/core/: __init__.py  check.py  context.py  finding.py  http.py  options.py  registry.py  runner.py
src/gisweep/cve/: __init__.py  db.py
src/gisweep/data/: __init__.py  compliance_map.yml  country_codes.yml  cve_db.json  pii_patterns.yml  secret_patterns.yml
src/gisweep/discovery/: __init__.py  arcgis_enum.py  browser.py  library_detect.py  ogc_enum.py  wfs_schema.py
src/gisweep/outputs/: __init__.py  _meta.py  base.py  console.py  html.py  json_writer.py  markdown.py  registry.py  sarif.py
src/gisweep/patterns/: __init__.py  pii.py  secrets.py
src/gisweep/runtime/: __init__.py  _pivot.py  _progress.py  arcgis.py  auto.py  cleanup.py  ogc.py  secrets.py  web.py
tests/: conftest.py
tests/integration/: test_arcgis_runtime.py  test_cleanup_runtime.py  test_cli.py  test_runtime_summaries.py  test_secrets_runtime.py  test_web_runtime.py
tests/unit/: test_arcgis_runtime_helpers.py  test_audit_log.py  test_auth.py  test_auto_detect.py  test_auto_pivot.py  test_compliance_geo.py  test_compliance_overlay.py  test_console_output.py  test_cve_db.py  test_discovery.py  test_finding.py  test_http.py  test_library_detect.py  test_ogc_discovery.py  test_outputs_writers.py  test_pii_patterns.py  test_pivot.py  test_registry.py  test_runner.py  test_runner_progress.py  test_secret_patterns.py
tests/unit/checks/: test_arc015_cves.py  test_arc_access.py  test_arc_active_write.py  test_arc_credentials.py  test_arc_data_exfil.py  test_arc_portal.py  test_arc_ssrf.py  test_arcgis_checks.py  test_ogc_active_wfs_t.py  test_ogc_checks.py  test_ogc_data.py  test_web_checks.py  test_web_posture.py
