[project]
name = "gisweep"
version = "0.2.0"
description = "GIS vulnerability scanner — ArcGIS REST, embedded maps, secret detection, KVKK/GDPR-aware"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Enis Getmez", email = "enis@enisgetmez.com" }]
keywords = ["gis", "arcgis", "security", "vulnerability-scanner", "kvkk", "gdpr", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "playwright>=1.45",
    "packaging>=24.0",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-playwright>=0.5",
    "respx>=0.21",
    "vcrpy>=6.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
    "pre-commit>=3.7",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
gisweep = "gisweep.cli:app"

[project.urls]
Homepage = "https://github.com/enisgetmez/gisweep"
Documentation = "https://enisgetmez.github.io/gisweep"
Repository = "https://github.com/enisgetmez/gisweep"
Issues = "https://github.com/enisgetmez/gisweep/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gisweep"]

[tool.hatch.build.targets.sdist]
include = ["src/gisweep", "tests", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",       # pycodestyle
    "F",            # pyflakes
    "I",            # isort
    "N",            # pep8-naming
    "UP",           # pyupgrade
    "B",            # bugbear
    "A",            # builtins
    "C4",           # comprehensions
    "SIM",          # simplify
    "RET",          # return
    "RUF",          # ruff-specific
    "S",            # bandit (security)
    "DTZ",          # datetimez
    "PTH",          # pathlib
    "TID",          # tidy imports
    "TCH",          # type-checking
    "PL",           # pylint
    "PERF",         # perflint
    "ANN",          # annotations
    "ASYNC",        # async-checks
    "T20",          # no print
]
ignore = [
    "PLR0913",      # too-many-arguments — Finding has many fields by design
    "ANN401",       # Any allowed where genuinely needed
    "S311",         # pseudo-random fine for test feature uuids
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "PLR2004", "ANN", "PT004"]
"src/gisweep/cli.py" = ["B008", "PLR0913", "FBT001", "FBT002"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_decorators = true
no_implicit_reexport = true
files = ["src/gisweep", "tests"]

[[tool.mypy.overrides]]
module = ["vcr.*", "respx.*", "defusedxml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=gisweep",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=85",
]
markers = [
    "integration: end-to-end CLI tests",
    "e2e: requires live services or docker",
    "slow: takes >1s",
]

[tool.coverage.run]
branch = true
source = ["gisweep"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
